--- a/pair.html
+++ b/pair.html
@@ -1,242 +1,265 @@
-<!DOCTYPE html><html lang="en"><head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Malvin PAIR CODE</title>
-  <link rel="stylesheet" href="css/all.min.css">
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      background-image: url("https://i.ibb.co/pXL9RYv/temp-image.jpg"); /* Set the background image */
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
-      font-family: Arial, sans-serif;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>TERAN-XMD Pair Code</title>
+<link rel="stylesheet" href="css/all.min.css">
+<style>
+  body {
+    margin: 0;
+    overflow: hidden;
+    font-family: Arial, sans-serif;
+    height: 100vh;
+    color: white;
+    position: relative;
+  }
+
+  /* Animated Canva-style gradient background */
+  #gradientBg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 200%;
+    height: 200%;
+    background: linear-gradient(270deg, #00c4cc, #8a2be2, #ff7f50, #ffd700, #ff1493, #32cd32);
+    background-size: 1200% 1200%;
+    animation: gradientMove 30s ease infinite;
+    z-index: 0;
+  }
+  @keyframes gradientMove {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+  }
+
+  canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
+
+  .container {
+    position: relative;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+  }
+
+  /* Your image */
+  .profile-img {
+    max-width: 200px;
+    border-radius: 15px;
+    border: 3px solid white;
+    box-shadow: 0 0 20px rgba(255,255,255,0.6);
+    margin-bottom: 20px;
+  }
+
+  h1 {
+    font-size: 3rem;
+    text-shadow:
+      0 0 10px #ff00ff,
+      0 0 20px #ff00ff,
+      0 0 40px #00ffff,
+      0 0 80px #ffff00;
+    animation: glow 3s ease-in-out infinite;
+    margin-bottom: 10px;
+    text-align: center;
+  }
+  @keyframes glow {
+    0%, 100% {
+      text-shadow:
+        0 0 10px #ff00ff,
+        0 0 20px #ff00ff,
+        0 0 40px #00ffff,
+        0 0 80px #ffff00;
     }
-
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+    50% {
+      text-shadow:
+        0 0 20px #00ffff,
+        0 0 40px #ffff00,
+        0 0 80px #ff00ff,
+        0 0 160px #ff0000;
     }
+  }
 
-    .box {
-      width: 300px;
-      height: 330px;
-      padding: 20px;
-      position: relative;
-      text-align: center;
-      background-color: rgba(255,255,255,0.5);
-      border-radius: 10px;
-      transform: perspective(1000px) rotateY(0deg);
-      box-shadow: none; /* Removed box shadow */
-      position: relative;
-    }
-
-    #text {
-      color: #000; /* Set the text color to black (#000) */
-    }
-
-    .input-container input {
-      color: #000; /* Set the text color to black (#000) */
-    }
-
-    .centered-text {
-      color: #000; /* Set the text color to black (#000) */
-    }
-
-    .input-container {
-      display: flex;
-      background: white;
-      border-radius: 1rem;
-      background: linear-gradient(45deg, #c5c5c5 0%, #ffffff 100%);
-      padding: 0.3rem;
-      gap: 0.3rem;
-      max-width: 300px; /* Set your desired maximum width */
-      width: 100%;
-    }
-
-    .input-container input {
-      border-radius: 0.8rem 0 0 0.8rem;
-      background: #e8e8e8;
-      width: 89%;
-      flex-basis: 75%;
-      padding: 1rem;
-      border: none;
-      border-left: 2px solid #ff9d9d;
-      color: #5e5e5e;
-      transition: all 0.2s ease-in-out;
-    }
-
-    .input-container input:focus {
-      border-left: 2px solid #ff9d9d;
-      outline: none;
-    }
-
-    .input-container button {
-      flex-basis: 25%;
-      padding: 1rem;
-      background: linear-gradient(135deg, #8a2be2 0%, #800080 100%); /* Purple background */
-      font-weight: 900;
-      letter-spacing: 0.3rem;
-      text-transform: uppercase;
-      color: white;
-      border: none;
-      width: 100%;
-      border-radius: 0 1rem 1rem 0;
-      transition: all 0.2s ease-in-out;
-    }
-
-    .input-container button:hover {
-      background: linear-gradient(135deg, #A8E4A0 0%, #32CD32 100%);
-      color: red; /* Change text color on hover to red */
-    }
-
-    @media (max-width: 500px) {
-      .input-container {
-        flex-direction: column;
-      }
-
-      .input-container input {
-        border-radius: 0.8rem;
-      }
-
-      .input-container button {
-        padding: 1rem;
-        border-radius: 0.8rem;
-      }
-    }
-
-    .centered-text {
-      text-align: center;
-    }
-    
-    /* Glowing Text */
-    .glowing-text {
-      margin-top: 20px;
-      font-size: 1.2rem;
-      font-weight: bold;
-      color: white;
-      text-shadow: 
-        0 0 5px #FF0000, 
-        0 0 10px #FF0000, 
-        0 0 15px #FF4500, 
-        0 0 20px #FF4500, 
-        0 0 25px #FF6347, 
-        0 0 30px #FF6347;
-      animation: glow 2s infinite;
-    }
-
-    @keyframes glow {
-      0% {
-        text-shadow: 
-          0 0 5px #FF0000, 
-          0 0 10px #FF0000, 
-          0 0 15px #FF4500, 
-          0 0 20px #FF4500, 
-          0 0 25px #FF6347, 
-          0 0 30px #FF6347;
-      }
-      50% {
-        text-shadow: 
-          0 0 5px #32CD32, 
-          0 0 10px #32CD32, 
-          0 0 15px #32CD32, 
-          0 0 20px #7CFC00, 
-          0 0 25px #ADFF2F, 
-          0 0 30px #ADFF2F;
-      }
-      100% {
-        text-shadow: 
-          0 0 5px #1E90FF, 
-          0 0 10px #1E90FF, 
-          0 0 15px #00BFFF, 
-          0 0 20px #00BFFF, 
-          0 0 25px #87CEFA, 
-          0 0 30px #87CEFA;
-      }
-    }    
- 
-  </style>
+  .box {
+    width: 300px;
+    padding: 20px;
+    text-align: center;
+    background-color: rgba(255,255,255,0.15);
+    border-radius: 10px;
+    backdrop-filter: blur(5px);
+  }
+  .input-container {
+    display: flex;
+    border-radius: 1rem;
+    background: linear-gradient(45deg, #c5c5c5 0%, #ffffff 100%);
+    padding: 0.3rem;
+    gap: 0.3rem;
+    width: 100%;
+  }
+  .input-container input {
+    border-radius: 0.8rem 0 0 0.8rem;
+    background: #e8e8e8;
+    flex: 1;
+    padding: 1rem;
+    border: none;
+    color: #5e5e5e;
+    transition: all 0.2s ease-in-out;
+  }
+  .input-container input:focus {
+    outline: none;
+    border-left: 2px solid #ff9d9d;
+  }
+  .input-container button {
+    padding: 1rem;
+    background: linear-gradient(135deg, #8a2be2 0%, #800080 100%);
+    font-weight: 900;
+    letter-spacing: 0.1rem;
+    text-transform: uppercase;
+    color: white;
+    border: none;
+    border-radius: 0 1rem 1rem 0;
+    transition: all 0.2s ease-in-out;
+  }
+  .input-container button:hover {
+    background: linear-gradient(135deg, #A8E4A0 0%, #32CD32 100%);
+    color: red;
+  }
+  #pair {
+    margin-top: 10px;
+    font-weight: bold;
+    color: white;
+    min-height: 30px;
+  }
+</style>
 </head>
 <body>
-  <div class="container">
-    <div class="main">
-      <div class="box" id="box">
-        <div id="text">
-          <i class="fa fa-user"></i>
-          <p>
-            <h2 class="centered-text">MALVIN PAIR</h2>           
-            <h6>⚙Enter your number with country code.⚙</h6>
-            <div class="input-container">
-              <input placeholder="2637147XX" type="number" id="number" placeholder="⚙enter your phone number with country code⚙" name="">
-              <button id="submit">enter</button>
-            </div>
-           
-            <a id="waiting-message" class="centered-text" style="display: none;">in process...</a>
-            <br>
-            <br>
-            <main id="pair"></main>
-          <p></p>
-        </div>
-      </div>
+
+<!-- Canva-style gradient background -->
+<div id="gradientBg"></div>
+
+<!-- Particle canvas -->
+<canvas id="bg"></canvas>
+
+<!-- Foreground content -->
+<div class="container">
+  <!-- Your image here -->
+  <img class="profile-img" src="https://i.postimg.cc/wt4LMP49/IMG-20250810-WA0026.jpg" alt="TERAN-XMD">
+  <h1>TERAN-XMD</h1>
+  <div class="box">
+    <h4>⚙ Enter your number with country code ⚙</h4>
+    <div class="input-container">
+      <input placeholder="2637147XX" type="number" id="number">
+      <button id="submit">Enter</button>
     </div>
-    <div class="glowing-text">Powered By Malvin King</div>
+    <main id="pair"></main>
   </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
-  <script>
-    let a = document.getElementById("pair");
-    let b = document.getElementById("submit");
-    let c = document.getElementById("number");
-    let box = document.getElementById("box");
+</div>
 
-    async function Copy() {
-      let text = document.getElementById("copy").innerText;
-      let obj = document.getElementById("copy");
-      await navigator.clipboard.writeText(obj.innerText.replace('CODE: ', ''));
-      obj.innerText = "COPIED";
-      obj.style = "color:blue;font-weight:bold";
-      obj.size = "5";
-      setTimeout(() => {
-        obj.innerText = text;
-        obj.style = "color:black;font-weight-bold";
-        obj.size = "5";
-      }, 500);
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
+<script>
+  // Particle Background
+  const canvas = document.getElementById('bg');
+  const ctx = canvas.getContext('2d');
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+
+  let particles = [];
+  const colors = ['#ff0000', '#ff9900', '#33ff00', '#00ffff', '#ff00ff', '#ffff00'];
+
+  class Particle {
+    constructor(){
+      this.x = Math.random() * canvas.width;
+      this.y = Math.random() * canvas.height;
+      this.size = Math.random() * 5 + 1;
+      this.speedX = (Math.random() - 0.5) * 2;
+      this.speedY = (Math.random() - 0.5) * 2;
+      this.color = colors[Math.floor(Math.random() * colors.length)];
     }
+    update(){
+      this.x += this.speedX;
+      this.y += this.speedY;
+      if(this.x < 0 || this.x > canvas.width) this.speedX *= -1;
+      if(this.y < 0 || this.y > canvas.height) this.speedY *= -1;
+    }
+    draw(){
+      ctx.beginPath();
+      ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
+      ctx.fillStyle = this.color;
+      ctx.shadowBlur = 20;
+      ctx.shadowColor = this.color;
+      ctx.fill();
+    }
+  }
 
-    b.addEventListener("click", async (e) => {
-      e.preventDefault();
-      if (!c.value) {
-        a.innerHTML = '<a style="color:black;font-weight:bold">❗Enter your whatsapp number with country code.</a><br><br>';
-      } else if (c.value.replace(/[^0-9]/g, "").length < 11) {
-        a.innerHTML = '<a style="color:black;font-weight:bold">❌Invalid number format❌</a><br><br>';
-      } else {
-        const bc = c.value.replace(/[^0-9]/g, "");
-        let bb = "";
-        let bbc = "";
-        const cc = bc.split('');
-        cc.map(a => {
-          bbc += a;
-          if (bbc.length == 3) {
-            bb += " " + a;
-          } else if (bbc.length == 8) {
-            bb += " " + a;
-          } else {
-            bb += a;
-          }
-        });
-        c.type = "text";
-        c.value = "+" + bb;
-        c.style = "color:black;font-size:20px";
-        a.innerHTML = '<a style="color:black;font-weight:bold">Please wait🔎 </a><br><br>';
+  function init(){
+    particles = [];
+    for(let i = 0; i < 150; i++){
+      particles.push(new Particle());
+    }
+  }
+
+  function animateParticles(){
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    particles.forEach(p => {
+      p.update();
+      p.draw();
+    });
+    requestAnimationFrame(animateParticles);
+  }
+
+  window.addEventListener('resize', () => {
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+    init();
+  });
+
+  init();
+  animateParticles();
+
+  // Typewriter effect for code
+  function typeWriter(el, text, speed = 100) {
+    el.innerHTML = "";
+    let i = 0;
+    function typing(){
+      if(i < text.length){
+        el.innerHTML += text.charAt(i);
+        i++;
+        setTimeout(typing, speed);
+      }
+    }
+    typing();
+  }
+
+  // Phone Input Logic
+  const output = document.getElementById("pair");
+  const btn = document.getElementById("submit");
+  const input = document.getElementById("number");
+
+  btn.addEventListener("click", async (e) => {
+    e.preventDefault();
+    if (!input.value) {
+      output.innerHTML = '<span style="color:red;">❗ Enter your number with country code ❗</span>';
+    } else if (input.value.replace(/[^0-9]/g, "").length < 11) {
+      output.innerHTML = '<span style="color:red;">❌ Invalid number format ❌</span>';
+    } else {
+      const bc = input.value.replace(/[^0-9]/g, "");
+      output.innerHTML = '<span>Please wait 🔎</span>';
+      try {
         let { data } = await axios(`/code?number=${bc}`);
         let code = data.code || "Service Unavailable";
-        a.innerHTML = '<font id="copy" onclick="Copy()" style="color:red;font-weight:bold" size="5">CODE: <span style="color:black;font-weight:bold">' + code + '</span></font><br><br><br>';
+        typeWriter(output, `CODE: ${code}`, 80);
+      } catch {
+        output.innerHTML = '<span style="color:red;">⚠ Server Error ⚠</span>';
       }
-    });
-  </script>
+    }
+  });
+</script>
 </body>
 </html>
