--- a/pair.html
+++ b/pair.html
@@ -155,7 +155,7 @@
   <div class="box">
     <h4>⚙ Enter your number with country code ⚙</h4>
     <div class="input-container">
-      <input placeholder="2637147XX" type="number" id="number">
+      <input placeholder="254717028877" type="number" id="number">
       <button id="submit">Enter</button>
     </div>
     <main id="pair"></main>
